@@ -123,7 +123,8 @@ extern void *walk_non_aliased_vuses (ao_ref *, tree,
 				     void *);
 extern unsigned int walk_aliased_vdefs (ao_ref *, tree,
 					bool (*)(ao_ref *, tree, void *),
-					void *, bitmap *);
+					void *, bitmap *,
+					bool *function_entry_reached = NULL);
 extern void dump_alias_info (FILE *);
 extern void debug_alias_info (void);
 extern void dump_points_to_solution (FILE *, struct pt_solution *);
